# xacc

./: .gitmodules
.github/workflows/: ci-build-deploy-image.yml  ci-mac.yml
python/examples/: ir_transformation_pulse.py  pulse_ir_basic.py
python/examples/pulse/: pulse_opt_vqe.py
python/plugins/cirq/: cirq_three_qubit_merge_pass.py
quantum/examples/: CMakeLists.txt
quantum/examples/placement/: CMakeLists.txt  placement_run.cpp
quantum/examples/pulse/: CMakeLists.txt  custom_pulse_gate.cpp  mix_pulses_gates.cpp  test_open_pulse.cpp  test_pulse_gate_calibrarions.cpp
quantum/plugins/: CMakeLists.txt
quantum/plugins/circuits/: CMakeLists.txt  GeneratorsActivator.cpp
quantum/plugins/circuits/kak/: kak.cpp
quantum/plugins/circuits/linalg_utils/: utils.hpp
quantum/plugins/circuits/svd_opt/: svd_opt.cpp  svd_opt.hpp
quantum/plugins/circuits/svd_opt/tests/: CMakeLists.txt  SvdOptTester.cpp
quantum/plugins/dm_sim/: CMakeLists.txt  DmSimAccelerator.cpp  DmSimAccelerator.hpp  DmSimApi.hpp
quantum/plugins/dm_sim/nvidia_omp/: CMakeLists.txt  NvidiaOmpRunner.cu
quantum/plugins/dm_sim/nvidia_omp/tests/: CMakeLists.txt  DmSimAcceleratorMultipleGpusTester.cpp  DmSimAcceleratorTester.cpp  DmSimRunnerTest.cpp
quantum/plugins/ibm/accelerator/: IBMAccelerator.cpp  OpenPulseVisitor.cpp  QObjectExperimentVisitor.hpp
quantum/plugins/ibm/accelerator/json/: QObject.hpp
quantum/plugins/ibm/aer/accelerator/: aer_accelerator.cpp  aer_accelerator.hpp
quantum/plugins/optimal_control/: GOAT.cpp  GOAT.hpp
quantum/plugins/optimizers/: CMakeLists.txt  OptimizersActivator.cpp
quantum/plugins/optimizers/pulse/: OpenPulseUtils.cpp  OpenPulseUtils.hpp  PulseTransform.cpp  PulseTransform.hpp
quantum/plugins/xasm/: xasm_listener.cpp
(+1 files in other folders)
